Continuation of Test Upgrades