@@ -43,7 +43,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 @SpringBootTest(classes = {GeneMyBatisRepository.class, TestConfig.class})
@@ -52,82 +52,82 @@ public class GeneMyBatisRepositoryTest {
   @Autowired private GeneMyBatisRepository geneMyBatisRepository;
 
   @Test
-  public void getAllGenesIdProjection() throws Exception {
+  public void getAllGenesIdProjection() {
 
     List<Gene> result = geneMyBatisRepository.getAllGenes(null, null, "ID", null, null, null, null);
 
-    Assert.assertEquals(23, result.size());
-    Gene gene = result.get(0);
-    Assert.assertEquals((Integer) 207, gene.getEntrezGeneId());
-    Assert.assertEquals("AKT1", gene.getHugoGeneSymbol());
+    Assertions.assertEquals(23, result.size());
+    Gene gene = result.getFirst();
+    Assertions.assertEquals((Integer) 207, gene.getEntrezGeneId());
+    Assertions.assertEquals("AKT1", gene.getHugoGeneSymbol());
   }
 
   @Test
-  public void getAllGenesSummaryProjection() throws Exception {
+  public void getAllGenesSummaryProjection() {
 
     List<Gene> result =
         geneMyBatisRepository.getAllGenes(null, null, "SUMMARY", null, null, null, null);
 
-    Assert.assertEquals(23, result.size());
-    Gene gene = result.get(0);
-    Assert.assertEquals((Integer) 207, gene.getEntrezGeneId());
-    Assert.assertEquals("AKT1", gene.getHugoGeneSymbol());
-    Assert.assertEquals("protein-coding", gene.getType());
+    Assertions.assertEquals(23, result.size());
+    Gene gene = result.getFirst();
+    Assertions.assertEquals((Integer) 207, gene.getEntrezGeneId());
+    Assertions.assertEquals("AKT1", gene.getHugoGeneSymbol());
+    Assertions.assertEquals("protein-coding", gene.getType());
   }
 
   @Test
-  public void getAllGenesDetailedProjection() throws Exception {
+  public void getAllGenesDetailedProjection() {
 
     List<Gene> result =
         geneMyBatisRepository.getAllGenes(null, null, "DETAILED", null, null, null, null);
 
-    Assert.assertEquals(23, result.size());
-    Gene gene = result.get(0);
-    Assert.assertEquals((Integer) 207, gene.getEntrezGeneId());
-    Assert.assertEquals("AKT1", gene.getHugoGeneSymbol());
-    Assert.assertEquals("protein-coding", gene.getType());
+    Assertions.assertEquals(23, result.size());
+    Gene gene = result.getFirst();
+    Assertions.assertEquals((Integer) 207, gene.getEntrezGeneId());
+    Assertions.assertEquals("AKT1", gene.getHugoGeneSymbol());
+    Assertions.assertEquals("protein-coding", gene.getType());
   }
 
   @Test
-  public void getAllGenesSummaryProjection1PageSize() throws Exception {
+  public void getAllGenesSummaryProjection1PageSize() {
 
     List<Gene> result = geneMyBatisRepository.getAllGenes(null, null, "SUMMARY", 1, 0, null, null);
 
-    Assert.assertEquals(1, result.size());
+    Assertions.assertEquals(1, result.size());
   }
 
   @Test
-  public void getAllGenesSummaryProjectionHugoGeneSymbolSort() throws Exception {
+  public void getAllGenesSummaryProjectionHugoGeneSymbolSort() {
 
     List<Gene> result =
         geneMyBatisRepository.getAllGenes(
             null, null, "SUMMARY", null, null, "hugoGeneSymbol", "ASC");
 
-    Assert.assertEquals(23, result.size());
-    Assert.assertEquals("AKT1", result.get(0).getHugoGeneSymbol());
-    Assert.assertEquals("AKT2", result.get(1).getHugoGeneSymbol());
-    Assert.assertEquals("AKT3", result.get(2).getHugoGeneSymbol());
-    Assert.assertEquals("ALK", result.get(3).getHugoGeneSymbol());
-    Assert.assertEquals("ARAF", result.get(4).getHugoGeneSymbol());
-    Assert.assertEquals("ATM", result.get(5).getHugoGeneSymbol());
-    Assert.assertEquals("BRAF", result.get(6).getHugoGeneSymbol());
-    Assert.assertEquals("SAMD11", result.get(21).getHugoGeneSymbol());
+    Assertions.assertEquals(23, result.size());
+    Assertions.assertEquals("AKT1", result.get(0).getHugoGeneSymbol());
+    Assertions.assertEquals("AKT2", result.get(1).getHugoGeneSymbol());
+    Assertions.assertEquals("AKT3", result.get(2).getHugoGeneSymbol());
+    Assertions.assertEquals("ALK", result.get(3).getHugoGeneSymbol());
+    Assertions.assertEquals("ARAF", result.get(4).getHugoGeneSymbol());
+    Assertions.assertEquals("ATM", result.get(5).getHugoGeneSymbol());
+    Assertions.assertEquals("BRAF", result.get(6).getHugoGeneSymbol());
+    Assertions.assertEquals("SAMD11", result.get(21).getHugoGeneSymbol());
   }
 
   @Test
-  public void getMetaGenes() throws Exception {
+  public void getMetaGenes() {
 
     BaseMeta result = geneMyBatisRepository.getMetaGenes(null, null);
 
-    Assert.assertEquals((Integer) 23, result.getTotalCount());
+    Assertions.assertEquals((Integer) 23, result.getTotalCount());
   }
 
   @Test
-  public void getGeneByEntrezGeneIdNullResult() throws Exception {
+  public void getGeneByEntrezGeneIdNullResult() {
 
     Gene result = geneMyBatisRepository.getGeneByEntrezGeneId(999);
 
-    Assert.assertNull(result);
+    Assertions.assertNull(result);
   }
 
   @Test
@@ -135,17 +135,17 @@ public class GeneMyBatisRepositoryTest {
 
     Gene result = geneMyBatisRepository.getGeneByEntrezGeneId(207);
 
-    Assert.assertEquals((Integer) 207, result.getEntrezGeneId());
-    Assert.assertEquals("AKT1", result.getHugoGeneSymbol());
-    Assert.assertEquals("protein-coding", result.getType());
+    Assertions.assertEquals((Integer) 207, result.getEntrezGeneId());
+    Assertions.assertEquals("AKT1", result.getHugoGeneSymbol());
+    Assertions.assertEquals("protein-coding", result.getType());
   }
 
   @Test
-  public void getGeneByHugoGeneSymbolNullResult() throws Exception {
+  public void getGeneByHugoGeneSymbolNullResult() {
 
     Gene result = geneMyBatisRepository.getGeneByHugoGeneSymbol("invalid_gene");
 
-    Assert.assertNull(result);
+    Assertions.assertNull(result);
   }
 
   @Test
@@ -153,49 +153,49 @@ public class GeneMyBatisRepositoryTest {
 
     Gene result = geneMyBatisRepository.getGeneByHugoGeneSymbol("AKT1");
 
-    Assert.assertEquals((Integer) 207, result.getEntrezGeneId());
-    Assert.assertEquals("AKT1", result.getHugoGeneSymbol());
-    Assert.assertEquals("protein-coding", result.getType());
+    Assertions.assertEquals((Integer) 207, result.getEntrezGeneId());
+    Assertions.assertEquals("AKT1", result.getHugoGeneSymbol());
+    Assertions.assertEquals("protein-coding", result.getType());
   }
 
   @Test
-  public void getAliasesOfGeneByEntrezGeneIdEmptyList() throws Exception {
+  public void getAliasesOfGeneByEntrezGeneIdEmptyList() {
 
     List<String> result = geneMyBatisRepository.getAliasesOfGeneByEntrezGeneId(208);
 
-    Assert.assertEquals(0, result.size());
+    Assertions.assertEquals(0, result.size());
   }
 
   @Test
-  public void getAliasesOfGeneByEntrezGeneId() throws Exception {
+  public void getAliasesOfGeneByEntrezGeneId() {
 
     List<String> result = geneMyBatisRepository.getAliasesOfGeneByEntrezGeneId(207);
 
-    Assert.assertEquals(2, result.size());
-    Assert.assertEquals("AKT alias", result.get(0));
-    Assert.assertEquals("AKT alias2", result.get(1));
+    Assertions.assertEquals(2, result.size());
+    Assertions.assertEquals("AKT alias", result.get(0));
+    Assertions.assertEquals("AKT alias2", result.get(1));
   }
 
   @Test
-  public void getAliasesOfGeneByHugoGeneSymbolEmptyList() throws Exception {
+  public void getAliasesOfGeneByHugoGeneSymbolEmptyList() {
 
     List<String> result = geneMyBatisRepository.getAliasesOfGeneByHugoGeneSymbol("AKT2");
 
-    Assert.assertEquals(0, result.size());
+    Assertions.assertEquals(0, result.size());
   }
 
   @Test
-  public void getAliasesOfGeneByHugoGeneSymbol() throws Exception {
+  public void getAliasesOfGeneByHugoGeneSymbol() {
 
     List<String> result = geneMyBatisRepository.getAliasesOfGeneByHugoGeneSymbol("AKT1");
 
-    Assert.assertEquals(2, result.size());
-    Assert.assertEquals("AKT alias", result.get(0));
-    Assert.assertEquals("AKT alias2", result.get(1));
+    Assertions.assertEquals(2, result.size());
+    Assertions.assertEquals("AKT alias", result.get(0));
+    Assertions.assertEquals("AKT alias2", result.get(1));
   }
 
   @Test
-  public void fetchGenesByEntrezGeneIds() throws Exception {
+  public void fetchGenesByEntrezGeneIds() {
 
     List<Integer> entrezGeneIds = new ArrayList<>();
     entrezGeneIds.add(207);
@@ -203,15 +203,16 @@ public class GeneMyBatisRepositoryTest {
 
     List<Gene> result = geneMyBatisRepository.fetchGenesByEntrezGeneIds(entrezGeneIds, "SUMMARY");
 
-    Assert.assertEquals(2, result.size());
-    Gene gene = result.get(0);
-    Assert.assertEquals((Integer) 207, gene.getEntrezGeneId());
-    Assert.assertEquals("AKT1", gene.getHugoGeneSymbol());
-    Assert.assertEquals("protein-coding", gene.getType());
+    Assertions.assertEquals(2, result.size());
+    Gene gene;
+      gene = result.get(0);
+      Assertions.assertEquals((Integer) 207, gene.getEntrezGeneId());
+    Assertions.assertEquals("AKT1", gene.getHugoGeneSymbol());
+    Assertions.assertEquals("protein-coding", gene.getType());
   }
 
   @Test
-  public void fetchGenesByHugoGeneSymbols() throws Exception {
+  public void fetchGenesByHugoGeneSymbols() {
 
     List<String> hugoGeneSymbols = new ArrayList<>();
     hugoGeneSymbols.add("AKT1");
@@ -220,15 +221,17 @@ public class GeneMyBatisRepositoryTest {
     List<Gene> result =
         geneMyBatisRepository.fetchGenesByHugoGeneSymbols(hugoGeneSymbols, "SUMMARY");
 
-    Assert.assertEquals(2, result.size());
-    Gene gene = result.get(0);
-    Assert.assertEquals((Integer) 207, gene.getEntrezGeneId());
-    Assert.assertEquals("AKT1", gene.getHugoGeneSymbol());
-    Assert.assertEquals("protein-coding", gene.getType());
+    Assertions.assertEquals(2, result.size());
+    Gene gene;
+    gene = result.getFirst();
+    
+    Assertions.assertEquals((Integer) 207, gene.getEntrezGeneId());
+    Assertions.assertEquals("AKT1", gene.getHugoGeneSymbol());
+    Assertions.assertEquals("protein-coding", gene.getType());
   }
 
   @Test
-  public void fetchMetaGenesByEntrezGeneIds() throws Exception {
+  public void fetchMetaGenesByEntrezGeneIds() {
 
     List<Integer> entrezGeneIds = new ArrayList<>();
     entrezGeneIds.add(207);
@@ -236,11 +239,11 @@ public class GeneMyBatisRepositoryTest {
 
     BaseMeta result = geneMyBatisRepository.fetchMetaGenesByEntrezGeneIds(entrezGeneIds);
 
-    Assert.assertEquals((Integer) 2, result.getTotalCount());
+    Assertions.assertEquals((Integer) 2, result.getTotalCount());
   }
 
   @Test
-  public void fetchMetaGenesByHugoGeneSymbol() throws Exception {
+  public void fetchMetaGenesByHugoGeneSymbol() {
 
     List<String> hugoGeneSymbols = new ArrayList<>();
     hugoGeneSymbols.add("AKT1");
@@ -248,6 +251,6 @@ public class GeneMyBatisRepositoryTest {
 
     BaseMeta result = geneMyBatisRepository.fetchMetaGenesByHugoGeneSymbols(hugoGeneSymbols);
 
-    Assert.assertEquals((Integer) 2, result.getTotalCount());
+    Assertions.assertEquals((Integer) 2, result.getTotalCount());
   }
 }
