@@ -10,7 +10,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 @SpringBootTest(classes = {SignificantlyMutatedGeneMyBatisRepository.class, TestConfig.class})
@@ -20,86 +20,86 @@ public class SignificantlyMutatedGeneMyBatisRepositoryTest {
   private SignificantlyMutatedGeneMyBatisRepository significantlyMutatedGeneMyBatisRepository;
 
   @Test
-  public void getSignificantlyMutatedGenesIdProjection() throws Exception {
+  public void getSignificantlyMutatedGenesIdProjection() {
 
     List<MutSig> result =
         significantlyMutatedGeneMyBatisRepository.getSignificantlyMutatedGenes(
             "study_tcga_pub", "ID", null, null, null, null);
 
-    Assert.assertEquals(2, result.size());
-    MutSig mutSig = result.get(0);
-    Assert.assertEquals((Integer) 207, mutSig.getEntrezGeneId());
+    Assertions.assertEquals(2, result.size());
+    MutSig mutSig = result.getFirst();
+    Assertions.assertEquals((Integer) 207, mutSig.getEntrezGeneId());
   }
 
   @Test
-  public void getSignificantlyMutatedGenesSummaryProjection() throws Exception {
+  public void getSignificantlyMutatedGenesSummaryProjection() {
 
     List<MutSig> result =
         significantlyMutatedGeneMyBatisRepository.getSignificantlyMutatedGenes(
             "study_tcga_pub", "SUMMARY", null, null, null, null);
 
-    Assert.assertEquals(2, result.size());
-    MutSig mutSig = result.get(0);
-    Assert.assertEquals((Integer) 207, mutSig.getEntrezGeneId());
-    Assert.assertEquals((Integer) 1, mutSig.getCancerStudyId());
-    Assert.assertEquals("study_tcga_pub", mutSig.getCancerStudyIdentifier());
-    Assert.assertEquals("AKT1", mutSig.getHugoGeneSymbol());
-    Assert.assertEquals((Integer) 998421, mutSig.getNumbasescovered());
-    Assert.assertEquals((Integer) 17, mutSig.getNummutations());
-    Assert.assertEquals((Integer) 1, mutSig.getRank());
-    Assert.assertEquals(new BigDecimal("0.00000315"), mutSig.getpValue());
-    Assert.assertEquals(new BigDecimal("0.00233"), mutSig.getqValue());
+    Assertions.assertEquals(2, result.size());
+    MutSig mutSig = result.getFirst();
+    Assertions.assertEquals((Integer) 207, mutSig.getEntrezGeneId());
+    Assertions.assertEquals((Integer) 1, mutSig.getCancerStudyId());
+    Assertions.assertEquals("study_tcga_pub", mutSig.getCancerStudyIdentifier());
+    Assertions.assertEquals("AKT1", mutSig.getHugoGeneSymbol());
+    Assertions.assertEquals((Integer) 998421, mutSig.getNumbasescovered());
+    Assertions.assertEquals((Integer) 17, mutSig.getNummutations());
+    Assertions.assertEquals((Integer) 1, mutSig.getRank());
+    Assertions.assertEquals(new BigDecimal("0.00000315"), mutSig.getpValue());
+    Assertions.assertEquals(new BigDecimal("0.00233"), mutSig.getqValue());
   }
 
   @Test
-  public void getSignificantlyMutatedGenesDetailedProjection() throws Exception {
+  public void getSignificantlyMutatedGenesDetailedProjection() {
 
     List<MutSig> result =
         significantlyMutatedGeneMyBatisRepository.getSignificantlyMutatedGenes(
             "study_tcga_pub", "DETAILED", null, null, null, null);
 
-    Assert.assertEquals(2, result.size());
-    MutSig mutSig = result.get(0);
-    Assert.assertEquals((Integer) 207, mutSig.getEntrezGeneId());
-    Assert.assertEquals((Integer) 1, mutSig.getCancerStudyId());
-    Assert.assertEquals("study_tcga_pub", mutSig.getCancerStudyIdentifier());
-    Assert.assertEquals("AKT1", mutSig.getHugoGeneSymbol());
-    Assert.assertEquals((Integer) 998421, mutSig.getNumbasescovered());
-    Assert.assertEquals((Integer) 17, mutSig.getNummutations());
-    Assert.assertEquals((Integer) 1, mutSig.getRank());
-    Assert.assertEquals(new BigDecimal("0.00000315"), mutSig.getpValue());
-    Assert.assertEquals(new BigDecimal("0.00233"), mutSig.getqValue());
+    Assertions.assertEquals(2, result.size());
+    MutSig mutSig = result.getFirst();
+    Assertions.assertEquals((Integer) 207, mutSig.getEntrezGeneId());
+    Assertions.assertEquals((Integer) 1, mutSig.getCancerStudyId());
+    Assertions.assertEquals("study_tcga_pub", mutSig.getCancerStudyIdentifier());
+    Assertions.assertEquals("AKT1", mutSig.getHugoGeneSymbol());
+    Assertions.assertEquals((Integer) 998421, mutSig.getNumbasescovered());
+    Assertions.assertEquals((Integer) 17, mutSig.getNummutations());
+    Assertions.assertEquals((Integer) 1, mutSig.getRank());
+    Assertions.assertEquals(new BigDecimal("0.00000315"), mutSig.getpValue());
+    Assertions.assertEquals(new BigDecimal("0.00233"), mutSig.getqValue());
   }
 
   @Test
-  public void getSignificantlyMutatedGenesSummaryProjection1PageSize() throws Exception {
+  public void getSignificantlyMutatedGenesSummaryProjection1PageSize() {
 
     List<MutSig> result =
         significantlyMutatedGeneMyBatisRepository.getSignificantlyMutatedGenes(
             "study_tcga_pub", "SUMMARY", 1, 0, null, null);
 
-    Assert.assertEquals(1, result.size());
+    Assertions.assertEquals(1, result.size());
   }
 
   @Test
-  public void getSignificantlyMutatedGenesSummaryProjectionPValueSort() throws Exception {
+  public void getSignificantlyMutatedGenesSummaryProjectionPValueSort() {
 
     List<MutSig> result =
         significantlyMutatedGeneMyBatisRepository.getSignificantlyMutatedGenes(
             "study_tcga_pub", "SUMMARY", null, null, "pValue", "ASC");
 
-    Assert.assertEquals(2, result.size());
-    Assert.assertEquals(new BigDecimal("0.000000012"), result.get(0).getpValue());
-    Assert.assertEquals(new BigDecimal("0.00000315"), result.get(1).getpValue());
+    Assertions.assertEquals(2, result.size());
+    Assertions.assertEquals(new BigDecimal("0.000000012"), result.get(0).getpValue());
+    Assertions.assertEquals(new BigDecimal("0.00000315"), result.get(1).getpValue());
   }
 
   @Test
-  public void getMetaSignificantlyMutatedGenes() throws Exception {
+  public void getMetaSignificantlyMutatedGenes() {
 
     BaseMeta result =
         significantlyMutatedGeneMyBatisRepository.getMetaSignificantlyMutatedGenes(
             "study_tcga_pub");
 
-    Assert.assertEquals((Integer) 2, result.getTotalCount());
+    Assertions.assertEquals((Integer) 2, result.getTotalCount());
   }
 }
